2009-11-16 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Added check to respect non-expiring records (expire field value = 0) (thanks to Roberto Presedo)
	* Released to TER as version 1.0.3

2009-11-09 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Added storage of analysis results to avoid useless empty delete statements
	* Released to TER as version 1.0.2

2009-11-06 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Ensured proper variables initialization everywhere
	* Added feedback when extension is not configured
	* Released to TER as version 1.0.1

2009-10-04 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Released to TER as version 1.0.0